--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=33333
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://database-1.cuklnsiwmo9q.us-east-1.rds.amazonaws.com:3306/customerdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=admin
-spring.datasource.password=veera@12
+spring.datasource.password=UlVamsi#436
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
